--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -1,4 +1,4 @@
-.side-profile-box {
+.chat-box {
     width: 100%;
     height: 100%;
     padding: 2rem;
@@ -12,7 +12,7 @@
     flex-shrink: 0;
 }
 
-.side-profile-box h1 {
+.chat-box h1 {
     color: black;
     margin-bottom: 20px;
 }
