--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -27,12 +27,20 @@
   align-self: flex-start; /* Align top with left-profile */
 }
 
-.match-grid-container {
+.middle-container {
   flex: 1;
   height: 100vh;
   margin-top: 10px;
+  /* overflow-y: auto; */
+  padding: 1rem;
+}
+
+.match-grid-container {
+  flex: 1;
+  height: 45vh;
+  /* margin-top: 10px; */
   overflow-y: auto;
-  padding: 2rem;
+  /* padding: 1rem; */
   background-color: #f5f5f5;
   min-width: 0; /* Allows flex item to shrink below content size */
 }
