--- a/client/src/styles/MatchProfile.css
+++ b/client/src/styles/MatchProfile.css
@@ -86,9 +86,9 @@
 
 .match-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(127.5px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(127.5px, 1fr)) 127.5px;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 0rem;
   width: 100%;
 }
 
