Fully functional HelpPopup. Todo: add pictures/screenshots maybe???

--- a/client/src/styles/HelpPopup.css
+++ b/client/src/styles/HelpPopup.css
@@ -27,6 +27,12 @@
   flex: 1;
   overflow-y: auto;
   padding: 16px;
+  text-align: left;
+}
+
+.help-title {
+  text-align: center;
+  font-size: 2rem;     /* You can increase this for a bigger title */
 }
 
 .popup-footer {
