--- a/client/src/App.css
+++ b/client/src/App.css
@@ -86,6 +86,10 @@ input {
   color: #222;
 }
 
+select {
+  background-color: #fff;
+}
+
 input[type="text"]:focus {
   outline: none !important;
   box-shadow: none !important;
